--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "asddasd",
   "version": "1.0.0",
@@ -9,16 +8,27 @@
     "angular-ui-router": "^0.3.1"
   },
   "devDependencies": {
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-stage-0": "^6.5.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --inline --watch --port 9000"
   },
   "repository": {
     "type": "git",
     "url": "asdd"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-0"
+    ]
+  }
 }
